--- a/EasyDotNetNotification/EasyDotNetNotification.nuspec
+++ b/EasyDotNetNotification/EasyDotNetNotification.nuspec
@@ -2,13 +2,14 @@
 <package >
   <metadata>
     <id>EasyDotNetNotification</id>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
     <title>EasyDotNetNotification</title>
     <authors>Filipe Andre Floriani</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <license type="expression">MIT</license>
+    <!-- <icon>icon.png</icon> -->
+    <projectUrl>https://github.com/FilipeFloriani/EasyDotNetNotification</projectUrl>
     <description>A easy way to show notifications</description>
-    <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
     <copyright>Filipe Andre Floriani</copyright>
     <tags>EasyDotNetNotification WPF C# Alert Notification</tags>
   </metadata>
